<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="share_apl">Поделиться приложением</string>
    <string name="dark_mode">Темная тема</string>
    <string name="email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name= "email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="my_email" translatable="false">"ryuko.matoy.99@bk.ru"</string>
    <string name="share_url" translatable="false">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="terms_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_title">Поделиться приложением</string>
    <string name="itunes_url" translatable="false">https://itunes.apple.com</string>
    <string name="server_error">Проблемы со связью</string>
    <string name="server_error_text">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="default_trackTimeMills">00:00</string>
    <string name="timer_default">00:00</string>
    <string name="trackTimeMills_subj">Длительность</string>
    <string name="collection_name">Альбом</string>
    <string name="release_date">Год</string>
    <string name="genre_name">Жанр</string>
    <string name="country">Страна</string>
    <string name="space" />
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists_text">Вы не создали \nни одного плейлиста</string>
    <string name="no_favorites">Ваша медиатека пуста</string>
    <string name="playlists">Плейлисты</string>
    <string name="favorites">Избранные треки</string>
    <string name="new_playlist_header">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_create">Создать</string>
    <string name="creating_playlist_back">Завершить создание плейлиста?</string>
    <string name="creating_playlist_loss_data">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="track_added">Добавлено в плейлист</string>
    <string name="track_already_in_playlist">Трек уже добавлен в плейлист</string>

    <string name="track_count_5">треков</string>
    <string name="track_count_1">трек</string>
    <string name="track_count_2_4">трека</string>
    <string name="add_to_playlist_string">Добавить в плейлист</string>
    <string name="share">Поделиться</string>
    <string name="edit">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="editPlaylist">Редактировать</string>
    <string name="saveChanges">Сохранить</string>
    <string name="track_count_format">%1$d %2$s</string>
    <string name="playlist_empty">В этом плейлисте нет треков</string>
    <string name="delete_track">Удалить трек</string>
    <string name="delete_track_alert">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="delete">Удалить</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_delete_alert">Хотите удалить плейлист</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

</resources>