<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    style="@style/Theme.MyApp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/app_name"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/white"
        android:textSize="@dimen/main_screen_text_size"
        android:letterSpacing="@dimen/main_letters_spacing" />


    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/search"
        app:icon = "@drawable/search_ic"
        app:iconTint="@color/black"
        style="@style/MenuButtons">

    </Button>


    <Button
        android:id="@+id/mediateka_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/mediateka"
        style="@style/MenuButtons"
        app:icon="@drawable/music_ic"
        app:iconTint ="@color/black"
        />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/settings"
        app:icon="@drawable/settings_ic"
        app:iconTint="@color/black"
        style = "@style/MenuButtons"
        />

</LinearLayout>