<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style=""
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/default_padding"
    tools:context=".settings.ui.activity.SettingsFragment">

    <LinearLayout
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            style="@style/SettingsMainString"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:text="@string/settings" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_height"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">


        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/theme_switcher"
            style="@style/Switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/dark_mode" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/share_application"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_height"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsStrings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/share_apl" />

        <Space style="@style/SettingsSpacing" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="11dp"
            android:contentDescription="@string/share_apl"
            android:src="@drawable/share_ic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact_support"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_height"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsStrings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/write_support" />

        <Space style="@style/SettingsSpacing" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="11dp"
            android:contentDescription="@string/write_support"

            android:src="@drawable/support_ic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/terms_of_use"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_height"
        android:orientation="horizontal">

        <TextView
            style="@style/SettingsStrings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/terms_of_use" />

        <Space style="@style/SettingsSpacing" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="11dp"
            android:contentDescription="@string/terms_of_use"
            android:src="@drawable/accept_ic" />

    </LinearLayout>
</LinearLayout>