<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding"
    style="">

    <LinearLayout
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:src="@drawable/back_ic"
            style="@style/BackButton"
             />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/settings"
            style="@style/SettingsMainString"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_height"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dark_mode"
            style="@style/SettingsStrings"/>

        <Space style="@style/SettingsSpacing"/>

        <Switch
            android:id="@+id/theme_switcher"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity= "center"
            android:layout_marginEnd="-11dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/share_application"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/share_apl"
            style="@style/SettingsStrings"/>

        <Space style="@style/SettingsSpacing"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share_ic"
            android:layout_gravity="center"
            android:contentDescription="@string/share_apl" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact_support"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/SettingsStrings"
            android:text="@string/write_support"
            />

        <Space style="@style/SettingsSpacing" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/support_ic"
            android:layout_gravity="center"
            android:contentDescription="@string/write_support" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/terms_of_use"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="@style/SettingsStrings"
            android:text="@string/terms_of_use"
            />

        <Space style="@style/SettingsSpacing"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/accept_ic"
            android:layout_gravity="center"
            android:contentDescription="@string/terms_of_use" />

    </LinearLayout>
</LinearLayout>