<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary">

        <Button
            android:id="@+id/back_button"
            style="@style/audioPlayerBackIc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/space"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/artworkUrl512"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/audioplayer_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_button" />


        <TextView
            android:id="@+id/trackName"
            style="@style/audioPlayerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/artworkUrl512"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/artistName"
            style="@style/audioPlayerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/trackName"
            app:layout_constraintTop_toBottomOf="@id/trackName"
            tools:text="The Beatless" />

        <ImageView
            android:id="@+id/play_ic"
            style="@style/play_ic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <ImageView
            android:id="@+id/add_to_playlist"
            style="@style/add_to_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/play_ic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/play_ic" />

        <ImageView
            android:id="@+id/favorite"
            style="@style/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/play_ic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/play_ic" />

        <TextView
            android:id="@+id/timer"
            style="@style/timer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/timer_default"
            app:layout_constraintEnd_toEndOf="@id/play_ic"
            app:layout_constraintStart_toStartOf="@id/play_ic"
            app:layout_constraintTop_toBottomOf="@id/play_ic" />

        <TextView
            android:id="@+id/trackTimeMills_subj"
            style="@style/audioPlayerSubj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trackTimeMills_subj"
            app:layout_constraintBottom_toTopOf="@id/collectionName_subj"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="trackTimeMillsTag"
            app:layout_constraintTop_toBottomOf="@id/timer" />

        <TextView
            android:id="@+id/collectionName_subj"
            style="@style/audioPlayerSubj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collection_name"
            app:layout_constraintBottom_toTopOf="@id/releaseDate_subj"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="collectionNameTag"
            app:layout_constraintTop_toBottomOf="@id/trackTimeMills_subj" />

        <TextView
            android:id="@+id/releaseDate_subj"
            style="@style/audioPlayerSubj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/release_date"
            app:layout_constraintBottom_toTopOf="@id/primaryGenreName_subj"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="releaseDateTag"
            app:layout_constraintTop_toBottomOf="@id/collectionName_subj" />

        <TextView
            android:id="@+id/primaryGenreName_subj"
            style="@style/audioPlayerSubj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre_name"
            app:layout_constraintBottom_toTopOf="@id/country_subj"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="primaryGenreNameTag"
            app:layout_constraintTop_toBottomOf="@id/releaseDate_subj" />

        <TextView
            android:id="@+id/country_subj"
            style="@style/audioPlayerSubj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="countryTag"
            app:layout_constraintTop_toBottomOf="@id/primaryGenreName_subj" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_tags="collectionNameTag, trackTimeMillsTag, releaseDateTag, primaryGenreNameTag, countryTag" />

        <TextView
            android:id="@+id/trackTimeMills"
            style="@style/trackDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/trackTimeMills_subj"
            tools:text="5:35" />

        <TextView
            android:id="@+id/collectionName"
            style="@style/trackDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/collectionName_subj"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/releaseDate"
            style="@style/trackDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/releaseDate_subj"
            tools:text="2002" />

        <TextView
            android:id="@+id/primaryGenreName"
            style="@style/trackDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/primaryGenreName_subj"
            tools:text="Aboba" />

        <TextView
            android:id="@+id/country"
            style="@style/trackDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@id/country_subj"
            tools:text="Russia" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>