<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/new_playlist_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_ic"
        style="@style/BackButton"
        android:layout_marginTop="8dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/playlists_header_text" />


    <TextView
        android:id="@+id/playlists_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_playlist_header"
        style="@style/playlistHeaderTextStyle"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="16dp"/>

        <ImageView
            android:id="@+id/new_playlist_ic"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/new_playlist_add_ic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="@dimen/margin26"
            android:scaleType="centerCrop"
            android:layout_marginTop="48dp"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintTop_toBottomOf="@id/playlists_header_text"
            android:layout_gravity="center"
            />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/playlist_name_layout_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InputTextLayoutStyle"
            android:layout_marginHorizontal="@dimen/margin16"
            android:layout_marginTop="42dp"
            app:cursorColor="@color/progress_bar_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_playlist_ic">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/playlistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InputTextStyle"
                android:hint="@string/playlist_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="@dimen/margin16"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/playlist_description_layout_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/InputTextLayoutStyle"
            android:layout_marginHorizontal="@dimen/margin16"
            android:layout_marginTop="18dp"
            app:cursorColor="@color/progress_bar_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playlist_name_layout_style">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/playlistDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InputTextStyle"
                android:hint="@string/playlist_description"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:paddingHorizontal="@dimen/margin16"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create_playlist_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/margin16"
            android:layout_marginBottom="16dp"
            android:enabled="false"
            android:layout_marginTop="130dp"
            android:fontFamily="@font/ys_display_medium"
            android:backgroundTint="@drawable/new_playlist_button_selector"
            android:paddingVertical="13dp"
            android:text="@string/playlist_create"
            android:textAllCaps="false"
            android:textFontWeight="500"
            android:textSize="16dp"
            android:textColor="@color/white"
            app:cornerRadius="8dp"
            android:letterSpacing="0"
            app:layout_constraintTop_toBottomOf="@id/playlist_description_layout_style"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>